--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "file-loader": "^0.11.1",
     "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "howler": "^2.0.4",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "node-sass": "^4.5.3",
