--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "bluebird": "^3.5.0",
     "bootstrap": "4.0.0-beta",
     "chalk": "^2.0.1",
     "color": "^2.0.0",
