--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "blob-util": "^1.3.0",
     "bluebird": "^3.5.0",
     "bootstrap": "4.0.0-beta",
     "chai": "^3.5.0",
@@ -72,6 +73,7 @@
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
+    "qs": "^6.5.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
