--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
-    "vue-codemirror": "^3.1.4",
+    "vue-codemirror": "yhpark/vue-codemirror",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
